		CHANGES IN APE VERSION 5.7-1.1


BUG FIXES

    o rtt() was fixed when dates include NAs (issue #73 on GitHub).



		CHANGES IN APE VERSION 5.7-1


BUG FIXES

    o Some very unbalanced resulted in a segfault (see issue #70 on
      GitHub).


OTHER CHANGES

    o ape 5.7 introduced an implicit dependence on R >= 4.1. This has
      been corrected and this version should work with R >= 3.4 (and
      certainly with R >= 3.2).

    o All examples should now write files in the TMP directory (some
      still used to do this in the user's working directory).



		CHANGES IN APE VERSION 5.7


NEW FEATURES

    o The new function muscle5 calls MUSCLE5. There are two other new
      functions that depend on this program, efastats and letterconf,
      to compute summaries for a set of alternative alignments and
      display the confidence in each site in HTML, respectively.

    o print.LargeNumber() gains the options 'latex' (FALSE by default)
      and 'digits' (depends on 'latex').

    o drop.tip() and keep.tip() are now generic functions with methods
      for the classes "phylo" and "multiPhylo".


BUG FIXES

    o A bug was fixed in multi2di() and di2multi() for compressed
      "multiPhylo" objects causing an error if the object had to be
      reordered internally (see PR #51 on GitHub).

    o unroot() now accepts different "order" of the "phylo" object
      (see PR #52 on GitHub).

    o write.tree(), ladderize(), and balance() failed with very
      unbalanced trees (issues #53 and #54 on GitHub).

    o PGLS models used a wrong ordering of data if 'species' was a
      factor in corBrownian(, form = ~species) or other correlation
      structure functions.

    o A bug was fixed in the calculations of the variance of the TN93
      distance (dist.dna).

    o consensus() did not use postprocess.prop.part() and might
      scramble nodelabels (see PR #65 on GitHub).

    o is.binary.phylo() returned TRUE with trees such as
      ((a:1):1,b:2,c:2):1;.

